# tool

./: .dockerignore  .gitignore  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY_SUMMARY.md  Dockerfile  FIREBASE_AUTH_DOMAIN_FIX.md  FIREBASE_AUTH_SETUP.md  FIREBASE_COMPLETE_SETUP.md  FIREBASE_RULES_UPDATE.md  FIREBASE_SETUP.md  FIREBASE_STORAGE_RULES_REQUIRED.md  FIRESTORE_RULES_REQUIRED.md  GOOGLE_OAUTH_REDIRECT_FIX.md  GOOGLE_SIGNIN_SETUP.md  OAUTH_SETUP.md  Procfile  README.md  SERVICE_ACCOUNT_SETUP.md  SETUP_GUIDE.md  START_LOCAL.md  TESTING_GUIDE.md  cli.py  config_store.py  env.example  firebase_config.py  firebase_service.py  ig.py  integrations.py  main.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  simple_start.sh  test_fetch_stats.py  test_url_processing.py  test_urls.txt  twitter.py  (+2 more)
static/: dark-theme.css  firebase-config.js  firebase-init.js  index.html  script.js  styles.css
